--- a/playbook.yaml
+++ b/playbook.yaml
@@ -98,9 +98,9 @@
    - name: mv
      command: mv /skillcloud-nginx/index.html /skillcloud-nginx/site/index.html
    - name: docker balance
-     command: docker build -t /skillcloud-nginx/balance/ -t balance:balance
+     command: docker build /skillcloud-nginx/balance/ -t balance:balance
    - name: docker site
-     command: docker build -t /skillcloud-nginx/site/ -t site:site
+     command: docker build /skillcloud-nginx/site/ -t site:site
    - name: docker-compose
      command: docker-compose build
    - name: docker-compose up
