--- a/playbook.yaml
+++ b/playbook.yaml
@@ -107,7 +107,7 @@
      service:
         name: sshd
         state: restarted
-     when: ansible_distribution == 'Debian'
+     when: ansible_distribution == 'CentOS'
    - name: Restart SSH service
      systemd:
         name: ssh
